--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>生日快乐！</title>
+    <title>周榛然生日快乐！</title>
     <style>
         * {
             margin: 0;
@@ -301,7 +301,7 @@
     </div>
 
     <div class="container">
-        <h1>生日快乐！</h1>
+        <h1>周榛然生日快乐！</h1>
         
         <div class="message">
             <p>在这特别的日子里，愿所有的快乐、所有的幸福、所有的温馨、所有的好运都围绕在你身边！</p>
@@ -497,3 +497,4 @@
     </script>
 </body>
 </html>
+
