Revise birthday message and improve animations
Updated the birthday message and enhanced the celebratory features.

--- a/index.html
+++ b/index.html
@@ -320,7 +320,8 @@
         <h1>周榛然生日快乐！</h1>
         
         <div class="message">
-            <p>在这特别的日子里，愿所有的快乐、所有的幸福、所有的温馨、所有的好运都围绕在你身边！</p>
+            <p>榛然宝宝生日快乐！愿你的新岁充满欢笑和好运，一切美好与你相伴！🎉🎂🌟<br>
+                在这特别的日子里，愿所有的快乐、所有的幸福、所有的温馨、所有的好运都围绕在你身边！</p>
         </div>
         
         <div class="cake-container">
@@ -527,3 +528,4 @@
     </script>
 </body>
 </html>
+
